# bolao-copa-2026

./: .env.example  .gitignore  README.md  pyproject.toml
bolao/: __init__.py  agendador.py  apostador.py  backtest.py  cache.py  config.py  diagnostico.py  erros.py  llm.py  modelo.py  navegador.py  nomes.py  notificador.py  resultados.py  simulador.py
bolao/fontes/: __init__.py  football_data.py  odds_api.py  polymarket.py  sessao_http.py  site.py  site_http.py  supabase.py
deploy/: bolao.service
pesquisa/: __init__.py
pesquisa/estudos/: __init__.py  analise_multidao.py  calibrar_lambda.py  experimento_forca.py  horizonte_estrategia.py  quantificar_estrategia.py  replay_estrategias.py  teste_calibracao.py
pesquisa/experimento/: __init__.py  comparacao.py  dados.py  elo.py  mercado.py
scripts/: apostar_agora.py  backtest_report.py  simular.py  simular_bolao.py
