[project]
name = "bolao"
version = "0.1.0"
description = "Apostador automatico de bolao de futebol: modelo de Poisson, odds em tempo real e automacao do site"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.10.4",
    "playwright>=1.44.0",
    "httpx>=0.27.0",
    "scipy>=1.13.0",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.1",
    "diskcache>=5.6.3",
    "loguru>=0.7.2",
    "rapidfuzz>=3.9",
    "tenacity>=8.3",
]

[project.scripts]
bolao = "bolao.agendador:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bolao"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "respx>=0.21.1",
    "ruff>=0.15.17",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "E501",  # line too long, o ruff format cuida disso
]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true
